--- a/templates/chat.html
+++ b/templates/chat.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     <div class="chatbot-container">
@@ -29,5 +30,6 @@
 
     </div>
     
+    <script src="static/chatbot.js"></script>
 </body>
 </html>
